; ModuleID = '/home/carl/AnghaBench/libevent/extr_evrpc.c_evrpc_meta_data_free.c'
source_filename = "/home/carl/AnghaBench/libevent/extr_evrpc.c_evrpc_meta_data_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.evrpc_meta_list = type { i32 }
%struct.evrpc_meta = type { %struct.evrpc_meta*, %struct.evrpc_meta* }

@next = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.evrpc_meta_list*)* @evrpc_meta_data_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @evrpc_meta_data_free(%struct.evrpc_meta_list* %0) #0 {
  %2 = alloca %struct.evrpc_meta_list*, align 8
  %3 = alloca %struct.evrpc_meta*, align 8
  store %struct.evrpc_meta_list* %0, %struct.evrpc_meta_list** %2, align 8
  %4 = load %struct.evrpc_meta_list*, %struct.evrpc_meta_list** %2, align 8
  %5 = icmp ne %struct.evrpc_meta_list* %4, null
  %6 = zext i1 %5 to i32
  %7 = call i32 @EVUTIL_ASSERT(i32 %6)
  br label %8

8:                                                ; preds = %12, %1
  %9 = load %struct.evrpc_meta_list*, %struct.evrpc_meta_list** %2, align 8
  %10 = call %struct.evrpc_meta* @TAILQ_FIRST(%struct.evrpc_meta_list* %9)
  store %struct.evrpc_meta* %10, %struct.evrpc_meta** %3, align 8
  %11 = icmp ne %struct.evrpc_meta* %10, null
  br i1 %11, label %12, label %27

12:                                               ; preds = %8
  %13 = load %struct.evrpc_meta_list*, %struct.evrpc_meta_list** %2, align 8
  %14 = load %struct.evrpc_meta*, %struct.evrpc_meta** %3, align 8
  %15 = load i32, i32* @next, align 4
  %16 = call i32 @TAILQ_REMOVE(%struct.evrpc_meta_list* %13, %struct.evrpc_meta* %14, i32 %15)
  %17 = load %struct.evrpc_meta*, %struct.evrpc_meta** %3, align 8
  %18 = getelementptr inbounds %struct.evrpc_meta, %struct.evrpc_meta* %17, i32 0, i32 1
  %19 = load %struct.evrpc_meta*, %struct.evrpc_meta** %18, align 8
  %20 = call i32 @mm_free(%struct.evrpc_meta* %19)
  %21 = load %struct.evrpc_meta*, %struct.evrpc_meta** %3, align 8
  %22 = getelementptr inbounds %struct.evrpc_meta, %struct.evrpc_meta* %21, i32 0, i32 0
  %23 = load %struct.evrpc_meta*, %struct.evrpc_meta** %22, align 8
  %24 = call i32 @mm_free(%struct.evrpc_meta* %23)
  %25 = load %struct.evrpc_meta*, %struct.evrpc_meta** %3, align 8
  %26 = call i32 @mm_free(%struct.evrpc_meta* %25)
  br label %8

27:                                               ; preds = %8
  ret void
}

declare dso_local i32 @EVUTIL_ASSERT(i32) #1

declare dso_local %struct.evrpc_meta* @TAILQ_FIRST(%struct.evrpc_meta_list*) #1

declare dso_local i32 @TAILQ_REMOVE(%struct.evrpc_meta_list*, %struct.evrpc_meta*, i32) #1

declare dso_local i32 @mm_free(%struct.evrpc_meta*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
